# debt_display_clean

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  analysis_options.yaml  docker-compose.yml  l10n.yaml  pubspec.yaml  pyproject.toml
.run/: backend.run.xml  release-flutter.run.xml
assets/: privacy.txt
assets/env/: app.env  app.env.example
auth0/actions/: post-login-full-name-claim.js
backend/: .env.example  __main__.py  anonymize_user.py  api.py  auth.py  authorization.py  config.py  db.py  frontend.py  main.py  seed_test_data.py  services.py  storage.py  test_unpaid_summary.py
backend/__pycache__/: auth.cpython-314.pyc.2420191653456
backend/proto/: auth_pb2.py  auth_pb2.pyi  debt_pb2.py  debt_pb2.pyi
backend/web/: .gitkeep
lib/: auth0_service.dart  main.dart
lib/config/: app_config.dart
lib/l10n/: app_de.arb  app_en.arb
lib/services/: auth_backend_service.dart  camera_capture.dart  camera_capture_stub.dart  camera_capture_web.dart  debt_backend_service.dart  external_link.dart  external_link_web.dart  file_mime_policy.dart  file_preview.dart  file_preview_stub.dart  (+5 more)
notes/: authorization_todo.md  db_interface_plan.md
proto/: auth.proto  debt.proto
test/: auth_session_state_test.dart  file_mime_policy_test.dart  privacy_consent_state_test.dart  responsive_shell_test.dart
tests/: test_chart_summary.py  test_frontend_cache.py  test_frontend_static_dir.py  test_recommended_tags.py  test_security.py  test_unpaid_summary.py
web/: flutter_bootstrap.js  index.html  manifest.json
(+21 files in other folders)
