[project]
name = "debt-display"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "httpx>=0.28.0",
    "protobuf>=7.34.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt[cryptography]>=2.12.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]
